--- a/css/templatemo-festava-live.css
+++ b/css/templatemo-festava-live.css
@@ -908,18 +908,18 @@ strong {
   display: block;
 }
 
-.social-icon-link span:hover::before{
-  animation: spinAround 2s linear infinite;
-}
+/*.social-icon-link span:hover::before{*/
+/*  animation: spinAround 2s linear infinite;*/
+/*}*/
 
-@keyframes spinAround {
-  from {
-    transform: rotate(0deg)
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+/*@keyframes spinAround {*/
+/*  from {*/
+/*    transform: rotate(0deg)*/
+/*  }*/
+/*  to {*/
+/*    transform: rotate(360deg);*/
+/*  }*/
+/*}*/
 
 /*---------------------------------------
   TYPEWRITER STYLES
